@@ -238,6 +238,7 @@ rubia-craptonite-earring=Plutonium earring
 rubia-craptonite-glove=Platinum gauntlets
 rubia-craptonite-lamp=Craptonite lamp
 rubia-craptonite-belt-buckle=Meteorite belt buckle
+rubia-craptonite-bracer=Craptonite Dreambangle
 
 rubia-biofusion-science-pack=Biofusion science packs
 
@@ -287,6 +288,7 @@ rubia-craptonite-earring=A craptonite earing encrusted with plutonium to keep yo
 rubia-craptonite-glove=Gauntlets with platinum catalyst supported on a craptonite substrate to allow you to craft items faster. 
 rubia-craptonite-lamp=Keep an energy efficient bulb on your suit. Its durable craptonite frame can withstand high pressure to illuminate the darkest depths.
 rubia-craptonite-belt-buckle=Make a craptonite belt buckle encrusted with a precious meteorite from __PLANET__muluna__. The cosmos will ensure that your pants are held securely.
+rubia-craptonite-bracer=Cube cube cube cube, cube Cube cube cube--cube cube Cube cube. Cube cube, cube cube cube Cube! Cube cube cube cube cube cube cube... cube? CUBE!!!?!? Cube cube cube Cube cube cube CUBE Cube; Cube, Cube cube. cube cube cube cube (cube cube Cube), cube Cube cube cube? CUBE/cube/cube cube Cube cube cube: cube, cube, Cube, cube cube. Cube cube cube.
 
 [modifier-description]
 rubia-project-trashdragon=Enables rocket launches from Rubia.
