@@ -410,7 +410,7 @@ rubia.timing_manager.register("cutscene-roboport-failsafe-part2", function(playe
 end)
 
 rubia.timing_manager.register("delayed-text-print", function(player, local_string, print_settings) 
-    if player then player.print(local_string, print_settings)
+    if player and player ~= "game" then player.print(local_string, print_settings)
     else game.print(local_string, print_settings)
     end
 end)
